--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
               <div>
                   <h3>Email NewsLetter</h3>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                  <form>
-                      <input type="Email" placeholder="Enter Email...">
+                  <form name="contact" method="POST" data-netlify="true">
+                      <input type="Email" name="email" placeholder="Enter Email...">
                       <input type="Submit" value="Subscribe" class="btn btn-primary">
                   </form>
               </div>
